--- a/readme
+++ b/readme
@@ -1,20 +1,46 @@
 graphics pipeline implemented on xc7a35t_0
-
+                                
 ┌───────────────────┐           
 │vertex/index buffer│           
 └─────────┬─────────┘           
           │                     
           ▼               0     
- ┌─────────────────┐      •     
- │ input assembler │     / \    
- └────────┬────────┘    /   \   
-          │          1 •-----• 2
+┌───────────────────┐     •     
+│  input assembler  │    / \    
+└─────────┬─────────┘   /   \   
+          │          1 •─────• 2
+          │                     
+          ▼                0    
+┌───────────────────┐      .    
+│   vertex shader   │     /|    
+└─────────┬─────────┘    / |    
+          │             /  |    
+          │           1 '-.| 2  
           ▼                     
-  ┌───────────────┐             
-  │ vertex shader │             
-  └───────┬───────┘             
+┌───────────────────┐           
+│   tessellation    │           
+└─────────┬─────────┘           
+          │                     
           │                     
           ▼                     
-  ┌───────────────┐             
-  │ tessellation  │             
-  └───────────────┘             
+┌───────────────────┐           
+│  geometry shader  │           
+└─────────┬─────────┘           
+          │                     
+          │                     
+          ▼                     
+┌───────────────────┐           
+│   rasterization   │           
+└─────────┬─────────┘           
+          │                     
+          │                     
+          ▼                     
+┌───────────────────┐           
+│  fragment shader  │           
+└─────────┬─────────┘           
+          │                     
+          │                     
+          ▼                     
+┌───────────────────┐           
+│  color blending   │           
+└───────────────────┘           
