--- a/readme
+++ b/readme
@@ -1,46 +1,47 @@
 graphics pipeline implemented on xc7a35t_0
-                                
-┌───────────────────┐           
-│vertex/index buffer│           
-└─────────┬─────────┘           
-          │                     
-          ▼               0     
-┌───────────────────┐     •     
-│  input assembler  │    / \    
-└─────────┬─────────┘   /   \   
-          │          1 •─────• 2
-          │                     
-          ▼                0    
-┌───────────────────┐      .    
-│   vertex shader   │     /|    
-└─────────┬─────────┘    / |    
-          │             /  |    
-          │           1 '-.| 2  
-          ▼                     
-┌───────────────────┐           
-│   tessellation    │           
-└─────────┬─────────┘           
-          │                     
-          │                     
-          ▼                     
-┌───────────────────┐           
-│  geometry shader  │           
-└─────────┬─────────┘           
-          │                     
-          │                     
-          ▼                     
-┌───────────────────┐           
-│   rasterization   │           
-└─────────┬─────────┘           
-          │                     
-          │                     
-          ▼                     
-┌───────────────────┐           
-│  fragment shader  │           
-└─────────┬─────────┘           
-          │                     
-          │                     
-          ▼                     
-┌───────────────────┐           
-│  color blending   │           
-└───────────────────┘           
+                                 
+┌───────────────────┐            
+│vertex/index buffer│            
+└─────────┬─────────┘            
+          │                      
+          │               0      
+          ▼               •      
+┌───────────────────┐    / \     
+│  input assembler  │   /   \    
+└─────────┬─────────┘ 1•─────•2  
+          │                      
+          │                      
+          ▼               0.     
+┌───────────────────┐     /|     
+│   vertex shader   │    / |     
+└─────────┬─────────┘   /  |     
+          │           1 '-.| 2   
+          │                      
+          ▼               0.     
+┌───────────────────┐     /|     
+│   tessellation    │    /┼|     
+└─────────┬─────────┘   /┼┼|     
+          │           1 '-.| 2   
+          │                      
+          ▼               0^     
+┌───────────────────┐     /|\    
+│  geometry shader  │    /┼| \   
+└─────────┬─────────┘   /┼┼|  \  
+          │           1 '-.|.-' 3
+          │                 2    
+          ▼                      
+┌───────────────────┐            
+│   rasterization   │            
+└─────────┬─────────┘            
+          │                      
+          │                      
+          ▼                      
+┌───────────────────┐            
+│  fragment shader  │            
+└─────────┬─────────┘            
+          │                      
+          │                      
+          ▼                      
+┌───────────────────┐            
+│  color blending   │            
+└───────────────────┘            
