--- a/readme
+++ b/readme
@@ -8,7 +8,7 @@ graphics pipeline implemented on xc7a35t_0
           ▼               •      
 ┌───────────────────┐    / \     
 │  input assembler  │   /   \    
-└─────────┬─────────┘ 1•─────•2  
+└─────────┬─────────┘1 •─────• 2 
           │                      
           │                      
           ▼               0.     
@@ -26,14 +26,14 @@ graphics pipeline implemented on xc7a35t_0
           ▼               0^     
 ┌───────────────────┐     /|\    
 │  geometry shader  │    /┼| \   
-└─────────┬─────────┘   /┼┼|  \  
-          │           1 '-.|.-' 3
-          │                 2    
-          ▼                      
-┌───────────────────┐            
-│   rasterization   │            
-└─────────┬─────────┘            
-          │                      
+└─────────┬─────────┘   /┼┼|  \ 3
+          │           1 '-.|.-'  
+          │                  2   
+          ▼                █     
+┌───────────────────┐     ███    
+│   rasterization   │    █████   
+└─────────┬─────────┘   ███████  
+          │             ███████  
           │                      
           ▼                      
 ┌───────────────────┐            
