--- a/readme
+++ b/readme
@@ -1,5 +1,4 @@
 graphics pipeline implemented on xc7a35t_0
-                                 
 ┌───────────────────┐            
 │vertex/index buffer│            
 └─────────┬─────────┘            
@@ -26,15 +25,15 @@ graphics pipeline implemented on xc7a35t_0
           ▼               0^     
 ┌───────────────────┐     /|\    
 │  geometry shader  │    /┼| \   
-└─────────┬─────────┘   /┼┼|  \ 3
-          │           1 '-.|.-'  
-          │                  2   
-          ▼                █     
-┌───────────────────┐     ███    
-│   rasterization   │    █████   
-└─────────┬─────────┘   ███████  
-          │             ███████  
-          │                      
+└─────────┬─────────┘   /┼┼|  \  
+          │           1 '-.|.-' 3
+          │                 2    
+          ▼                      
+┌───────────────────┐  □□□□■□□□□ 
+│   rasterization   │  □□□■■■□□□ 
+└─────────┬─────────┘  □□■■■■■□□ 
+          │            □■■■■■■■□ 
+          │            □□■■■■■□□ 
           ▼                      
 ┌───────────────────┐            
 │  fragment shader  │            
