--- a/readme
+++ b/readme
@@ -34,13 +34,13 @@ graphics pipeline implemented on xc7a35t_0
 └─────────┬─────────┘  □□■■■■■□□ 
           │            □■■■■■■■□ 
           │            □□■■■■■□□ 
-          ▼                      
-┌───────────────────┐            
-│  fragment shader  │            
-└─────────┬─────────┘            
-          │                      
-          │                      
-          ▼                      
-┌───────────────────┐            
-│  color blending   │            
-└───────────────────┘            
+          ▼                     
+┌───────────────────┐  □□□□▥□□□□
+│  fragment shader  │  □□□▨▥▧□□□
+└─────────┬─────────┘  □□▨▨▥▧▧□□
+          │            □▨▨▥▥▥▧▧□
+          │            □□▧▤▥▤▨□□
+          ▼                     
+┌───────────────────┐           
+│  color blending   │           
+└───────────────────┘           
