--- a/readme
+++ b/readme
@@ -35,11 +35,11 @@ graphics pipeline implemented on xc7a35t_0
           │            □■■■■■■■□ 
           │            □□■■■■■□□ 
           ▼                     
-┌───────────────────┐  □□□□▥□□□□
-│  fragment shader  │  □□□▨▥▧□□□
-└─────────┬─────────┘  □□▨▨▥▧▧□□
-          │            □▨▨▥▥▥▧▧□
-          │            □□▧▤▥▤▨□□
+┌───────────────────┐  ⠀⠀⠀⠀⣿⠀⠀⠀⠀
+│  fragment shader  │  ⠀⠀⠀■⣿■⠀⠀⠀
+└─────────┬─────────┘  ⠀⠀■■⣿■■⠀⠀
+          │            ⠀■■■⣿■■■⠀
+          │            ⠀⠀■■⣿■■⠀⠀
           ▼                     
 ┌───────────────────┐           
 │  color blending   │           
