--- a/readme
+++ b/readme
@@ -1,4 +1,5 @@
 graphics pipeline implemented on xc7a35t_0
+
 ┌───────────────────┐            
 │vertex/index buffer│            
 └─────────┬─────────┘            
@@ -7,7 +8,7 @@ graphics pipeline implemented on xc7a35t_0
           ▼               •      
 ┌───────────────────┐    / \     
 │  input assembler  │   /   \    
-└─────────┬─────────┘1 •─────• 2 
+└─────────┬─────────┘ 1•─────•2  
           │                      
           │                      
           ▼               0.     
@@ -28,19 +29,20 @@ graphics pipeline implemented on xc7a35t_0
 └─────────┬─────────┘   /┼┼|  \  
           │           1 '-.|.-' 3
           │                 2    
-          ▼                      
-┌───────────────────┐  □□□□■□□□□ 
-│   rasterization   │  □□□■■■□□□ 
+          ▼            □□□□■□□□□ 
+┌───────────────────┐  □□□■■■□□□ 
+│   rasterization   │  □□■■■■■□□ 
 └─────────┬─────────┘  □□■■■■■□□ 
-          │            □■■■■■■■□ 
-          │            □□■■■■■□□ 
-          ▼                     
-┌───────────────────┐  ⠀⠀⠀⠀⣿⠀⠀⠀⠀
-│  fragment shader  │  ⠀⠀⠀■⣿■⠀⠀⠀
-└─────────┬─────────┘  ⠀⠀■■⣿■■⠀⠀
-          │            ⠀■■■⣿■■■⠀
-          │            ⠀⠀■■⣿■■⠀⠀
-          ▼                     
-┌───────────────────┐           
-│  color blending   │           
-└───────────────────┘           
+          │            □□□■■■□□□ 
+          │                      
+          ▼            □□□□A□□□□ 
+┌───────────────────┐  □□□/I\□□□ 
+│  fragment shader  │  □□//I\\□□ 
+└─────────┬─────────┘  □'//I\\'□ 
+          │            □□□'I'□□□ 
+          │                      
+          ▼            □□□□A□□□□ 
+┌───────────────────┐  □□□*I=□□□ 
+│  color blending   │  □□**I==□□ 
+└───────────────────┘  □'**I=='□ 
+                       □□□'I'□□□ 
