--- a/readme
+++ b/readme
@@ -1,6 +1,5 @@
 graphics pipeline implemented on xc7a35t_0
 
-```
 ┌───────────────────┐            
 │vertex/index buffer│            
 └─────────┬─────────┘            
@@ -42,9 +41,8 @@ graphics pipeline implemented on xc7a35t_0
 └─────────┬─────────┘  □'//I\\'□ 
           │            □□□'I'□□□ 
           │                      
-          ▼            □□□□A□□□□ 
-┌───────────────────┐  □□□*I=□□□ 
-│  color blending   │  □□**I==□□ 
-└───────────────────┘  □'**I=='□ 
-                       □□□'I'□□□ 
-```
+          ▼            ⠀⠀⠀⠀A⠀⠀⠀⠀ 
+┌───────────────────┐  ⠀⠀⠀*I=⠀⠀⠀ 
+│  color blending   │  ⠀⠀**I==⠀⠀ 
+└───────────────────┘  ⠀'**I=='⠀ 
+                       ⠀⠀⠀'I'⠀⠀⠀ 
