--- a/readme
+++ b/readme
@@ -41,8 +41,8 @@ graphics pipeline implemented on xc7a35t_0
 └─────────┬─────────┘  □'//I\\'□ 
           │            □□□'I'□□□ 
           │                      
-          ▼            ⠀⠀⠀⠀A⠀⠀⠀⠀ 
-┌───────────────────┐  ⠀⠀⠀*I=⠀⠀⠀ 
-│  color blending   │  ⠀⠀**I==⠀⠀ 
-└───────────────────┘  ⠀'**I=='⠀ 
-                       ⠀⠀⠀'I'⠀⠀⠀ 
+          ▼                A     
+┌───────────────────┐     *I=    
+│  color blending   │    **I==   
+└───────────────────┘   '**I=='  
+                          'I'    
